rewriting internal method/name/pattern representations and resolution system (this commit does not build)